Tune GC and reduce memory used in tests
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>